--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
 				</div>
 			</div>
 		</nav>
-		<div class="container">
+		<div class="container overflow-hidden">
 			<div class="jumbotron jumbotron-fluid bg-transparent mt-5">
 				<div class="container">
 					<h1 class="title-1 wow bounceInUp" data-wow-delay="0.1s">Goodbye junk food <br> Hello super healthy meals</h1> 
-					<a href="#" class="btn btn-full js--scroll-to-plans">I’m hungry</a> 
-					<a href="#" class="btn btn-ghost  js--scroll-to-start">Show me more</a> </div>
+					<div class="d-flex justify-content-start align-items-center flex-wrap">
+						<a href="#" class="btn btn-full js--scroll-to-plans mr-4 my-1">I’m hungry</a> 
+						<a href="#" class="btn btn-ghost  js--scroll-to-start my-1">Show me more</a>
+					</div>
+
+				 </div>
 			</div>
 		</div>
 	</header>
