omnifood finished successfully

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ml-auto main-nav">
-						<li class="nav-item active"> <a class="nav-link" href="#features">Food delivery <span class="sr-only">(current)</span></a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#works">How it works</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#cities">Our cities</a> </li>
-						<li class="nav-item"> <a class="nav-link" href="#plans">Sign up</a> </li>
+						<li class="nav-item active"> <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#features">Food delivery <span class="sr-only">(current)</span></a> </li>
+						<li class="nav-item"> <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#works">How it works</a> </li>
+						<li class="nav-item"> <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#cities">Our cities</a> </li>
+						<li class="nav-item"> <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" href="#plans">Sign up</a> </li>
 					</ul>
 				</div>
 			</div>
