omnifood finished successfully

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-sm-12">
-					<ul class="footer-nav d-flex align-items-center justify-content-lg-start  justify-content-sm-center">
+					<ul class="footer-nav d-flex align-items-center justify-content-lg-start  justify-content-sm-center flex-wrap">
 						<li><a href="#">About us</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Press</a></li>
@@ -307,7 +307,7 @@
 					</ul>
 				</div>
 				<div class="col-lg-6 col-sm-12">
-					<ul class="social-links d-flex align-items-center justify-content-lg-end  justify-content-sm-center">
+					<ul class="social-links d-flex align-items-center justify-content-lg-end  justify-content-sm-center ">
 						<li><a href="#"><i class="ion-social-facebook"></i></a></li>
 						<li><a href="#"><i class="ion-social-twitter"></i></a></li>
 						<li><a href="#"><i class="ion-social-googleplus"></i></a></li>
