--- a/resources/ss.html
+++ b/resources/ss.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="./resources/css/media.css">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="./vendors/css/animate.css">
+	<script src="./vendors/js/wow.min.js"></script>
 
 	<title>Omnifood</title>
 </head>
@@ -38,7 +40,7 @@
 		<div class="container overflow-hidden">
 			<div class="jumbotron jumbotron-fluid bg-transparent mt-5">
 				<div class="container">
-					<h1 class="title-1 ">Goodbye junk food <br> Hello super healthy meals</h1> 
+					<h1 class="title-1 wow bounceInUp" data-wow-delay="0.1s">Goodbye junk food <br> Hello super healthy meals</h1> 
 					<div class="d-flex justify-content-start align-items-center flex-wrap">
 						<a href="#" class="btn btn-full js--scroll-to-plans mr-4 my-1">I’m hungry</a> 
 						<a href="#" class="btn btn-ghost  js--scroll-to-start my-1">Show me more</a>
@@ -54,20 +56,20 @@
 			<h2 class="title-2">Get food fast &mdash; not fast food</h2>
 			<p class="long-copy"> Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise! </p>
 			<div class="row">
-				<div class="col-lg-3  col-sm-6 ">
+				<div class="col-lg-3  col-sm-6 wow fadeInLeft">
 					<div class="icon"> <i class="ion-ios-infinite icon-big"></i> </div>
 					<h3 class="title-3">Up to 365 days/year</h3>
 					<p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style</p>
 				</div>
-				<div class="col-lg-3 col-sm-6 "> <i class="ion-ios-stopwatch icon-big"></i>
+				<div class="col-lg-3 col-sm-6 wow fadeInLeft"> <i class="ion-ios-stopwatch icon-big"></i>
 					<h3 class="title-3">Ready in 20 minutes</h3>
 					<p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.</p>
 				</div>
-				<div class="col-lg-3 col-sm-6"> <i class="ion-ios-nutrition icon-big"></i>
+				<div class="col-lg-3 col-sm-6 wow fadeInRight "> <i class="ion-ios-nutrition icon-big"></i>
 					<h3 class="title-3">100% organic</h3>
 					<p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!</p>
 				</div>
-				<div class="col-lg-3 col-sm-6 "> <i class="ion-android-cart icon-big"></i>
+				<div class="col-lg-3 col-sm-6 wow fadeInRight  "> <i class="ion-android-cart icon-big"></i>
 					<h3 class="title-3">Order anything</h3>
 					<p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
 				</div>
@@ -110,8 +112,8 @@
 		<div class="container">
 			<h2 class="title-2">How it works  &mdash;Simple as 1, 2, 3</h2>
 			<div class="row">
-				<div class="col-md-6 col-sm-12 d-flex justify-content-center justify-content-md-end align-items-center mb-4"> <img class="app-screen img-fluid" src="./resources/img/app-iPhone.png" alt="pminfood app on iphone"> </div>
-				<div class=" col-md-6 col-sm-12 steps-box">
+				<div class="col-md-6 col-sm-12 d-flex justify-content-center justify-content-md-end align-items-center mb-4 wow fadeInLeft"> <img class="app-screen img-fluid" src="./resources/img/app-iPhone.png" alt="pminfood app on iphone"> </div>
+				<div class=" col-md-6 col-sm-12 steps-box wow fadeInRight">
 					<div class="works-step"> <span>1</span>
 						<p>Choose the subscription plan that best fits your needs and sign up today</p>
 					</div>
@@ -134,25 +136,25 @@
 		<div class="container">
 			<h2 class="title-2">We're currently in these cities</h2>
 			<div class="row">
-				<div class="col-lg-3  col-md-6 col-sm-12 box"> <img src="./resources/img/lisbon-3.jpg" alt="Lisbon">
+				<div class="col-lg-3  col-md-6 col-sm-12 box wow fadeInUp"> <img src="./resources/img/lisbon-3.jpg" alt="Lisbon">
 					<h3 class="title-3">Lisbon</h3>
 					<div class="city-feature "> <i class="ion-person icon-small"></i> 1600+ happy eaters </div>
 					<div class="city-feature"> <i class="ion-android-star icon-small"></i> 60+ top chefs </div>
 					<div class="city-feature"> <i class="ion-social-twitter icon-small"></i> <a href="#">@omnifood_lx</a> </div>
 				</div>
-				<div class="col-lg-3  col-md-6 col-sm-12  box"> <img src="./resources/img/san-francisco.jpg" alt="San Francisco">
+				<div class="col-lg-3  col-md-6 col-sm-12  box wow fadeInUp"> <img src="./resources/img/san-francisco.jpg" alt="San Francisco">
 					<h3 class="title-3">San Francisco</h3>
 					<div class="city-feature"> <i class="ion-person icon-small"></i> 1600+ happy eaters </div>
 					<div class="city-feature"> <i class="ion-android-star icon-small"></i> 60+ top chefs </div>
 					<div class="city-feature"> <i class="ion-social-twitter icon-small"></i> <a href="#">@omnifood_lx</a> </div>
 				</div>
-				<div class="col-lg-3  col-md-6 col-sm-12  box "> <img src="./resources/img/berlin.jpg" alt="Berlin">
+				<div class="col-lg-3  col-md-6 col-sm-12  box wow fadeInUp"> <img src="./resources/img/berlin.jpg" alt="Berlin">
 					<h3 class="title-3">Berlin</h3>
 					<div class="city-feature"> <i class="ion-person icon-small"></i> 1600+ happy eaters </div>
 					<div class="city-feature"> <i class="ion-android-star icon-small"></i> 60+ top chefs </div>
 					<div class="city-feature"> <i class="ion-social-twitter icon-small"></i> <a href="#">@omnifood_lx</a> </div>
 				</div>
-				<div class="col-lg-3  col-md-6 col-sm-12 box "> <img src="./resources/img/london.jpg" alt="London">
+				<div class="col-lg-3  col-md-6 col-sm-12 box wow fadeInUp"> <img src="./resources/img/london.jpg" alt="London">
 					<h3 class="title-3">London</h3>
 					<div class="city-feature"> <i class="ion-person icon-small"></i> 1600+ happy eaters </div>
 					<div class="city-feature"> <i class="ion-android-star icon-small"></i> 60+ top chefs </div>
@@ -166,13 +168,13 @@
 		<div class="container">
 			<h2 class="title-2">Customer testimonials</h2>
 			<div class="row">
-				<div class="col-md-4 mb-5">
+				<div class="col-md-4 mb-5 wow fadeInDown">
 					<blockquote> Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals! <cite><img src="./resources/img/customer-1.jpg" alt=""> Alberto Duncan</cite> </blockquote>
 				</div>
-				<div class="col-md-4 mb-5 ">
+				<div class="col-md-4 mb-5  wow fadeInDown">
 					<blockquote> Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in! <cite><img src="./resources/img/customer-2.jpg" alt="">Joana Silva</cite> </blockquote>
 				</div>
-				<div class="col-md-4 mb-5 ">
+				<div class="col-md-4 mb-5  wow fadeInDown">
 					<blockquote> I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work! <cite><img src="./resources/img/customer-3.jpg" alt="">Milton Chapman</cite> </blockquote>
 				</div>
 			</div>
@@ -183,7 +185,7 @@
 		<div class="container">
 			<h2 class="title-2">Sign up and pricing plans</h2>
 			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-12 mb-4 ">
+				<div class="col-lg-4 col-md-6 col-sm-12 mb-4 wow fadeInRight">
 					<div class="plan-box">
 						<div class="price">
 							<h3>Premium</h3>
@@ -201,7 +203,7 @@
 						<div class="signUp"> <a href="#" class="btn btn-full">SignUp Now</a> </div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12  mb-4  ">
+				<div class="col-lg-4 col-md-6 col-sm-12  mb-4 wow fadeInLeft ">
 					<div class="plan-box">
 						<div class="price">
 							<h3>Premium</h3>
@@ -219,7 +221,7 @@
 						<div class="signUp"> <a href="#" class="btn btn-ghost">SignUp Now</a> </div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-12  mb-4  ">
+				<div class="col-lg-4 col-md-6 col-sm-12  mb-4  wow fadeInLeft ">
 					<div class="plan-box">
 						<div class="price">
 							<h3>Premium</h3>
@@ -241,7 +243,7 @@
 		</div>
 	</section>
 	<!-- contact section -->
-	<section class="section-contact" >
+	<section class="section-contact  wow fadeInDown" >
 		<div class="container">
             <h2 class="title-2"> We're happy to hear from you</h2>
 			<form action="#" method="post" class="contact-form">
